refactor: Adjust google java code style